@@ -30,12 +30,11 @@ type Enabled struct {
 
 type PluginConfig []map[string]common.Config
 
-func defaultKuberentesAnnotatorConfig() kubeAnnotatorConfig {
+func defaultKubernetesAnnotatorConfig() kubeAnnotatorConfig {
 	return kubeAnnotatorConfig{
 		InCluster:       true,
 		SyncPeriod:      1 * time.Second,
 		CleanupTimeout:  60 * time.Second,
-		Namespace:       "kube-system",
 		DefaultMatchers: Enabled{true},
 		DefaultIndexers: Enabled{true},
 	}
